AdventOdCode, trying to solvez Day08